--- a/artist.html
+++ b/artist.html
@@ -22,7 +22,7 @@
       <div class="row">
         <!-- NAVBAR DI SINISTRA -->
 
-        <div class="d-none d-md-block col-md-3 pe-0 bg-black2">
+        <div class="d-none d-md-block col-md-3 py-3 pe-0 bg-black2">
           <nav>
             <a
               class="text-white"
@@ -32,35 +32,35 @@
               aria-expanded="false"
               aria-controls="collapseExample"
             >
-              ...
+              <div class="ms-4 ps-2">. . .</div>
             </a>
             <div class="collapse" id="collapseExample">
               <ul>
-                <li class="d-flex align-items-center">
-                  <i class="bi bi-house-door-fill"></i
+                <li class="d-flex align-items-center mt-2">
+                  <i class="bi bi-house-door"> </i
                   ><a class="nav-link" href="./homepage.html">Home</a>
                 </li>
-                <li id="search" class="d-flex align-items-center">
+                <li id="search" class="d-flex align-items-center mt-2">
                   <i class="bi bi-search"></i
                   ><a class="nav-link" href="./search.html">Cerca</a>
                 </li>
-                <li class="d-flex align-items-center">
-                  <i class="bi bi-collection-fill"></i
+                <li class="d-flex align-items-center mt-2">
+                  <i class="bi bi-collection"></i
                   ><a class="nav-link" href="#">La Tua Libreria</a>
                 </li>
               </ul>
             </div>
-            <div class="cont_list_nav2 mt-3">
+            <div class="cont_list_nav2 mt-2">
               <ul>
-                <li class="d-flex align-items-center">
+                <li class="d-flex align-items-center mt-2">
                   <i class="bi bi-plus-square"></i
                   ><a class="nav-link" href="#">crea playlist</a>
                 </li>
-                <li class="d-flex align-items-center">
+                <li class="d-flex align-items-center mt-2">
                   <i class="bi bi-box2-heart"></i
                   ><a class="nav-link" href="#">Brani che ti piacciono</a>
                 </li>
-                <li class="d-flex align-items-center">
+                <li class="d-flex align-items-center mt-2">
                   <i class="bi bi-bookmark-fill"></i
                   ><a class="nav-link" href="#">I tuoi episodi</a>
                 </li>
@@ -68,129 +68,134 @@
             </div>
           </nav>
 
-          <hr class="division m-0" />
-          <div id="side-scroll" class="custom-padding m-2">
+          <hr class="division ms-1" />
+          <div id="side-scroll" class="custom-padding ms-2">
             <ul>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2 pb-2" href="#"
                   >early stage emily syndrome (sett-ott 2022)</a
                 >
               </li>
               <li>
-                <a class="nav-link" href="#">Be The Young</a>
+                <a class="nav-link pb-2" href="#">Be The Young</a>
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >"... cit. Kimiko (lug-ago 2022)"</a
                 >
               </li>
               <li>
-                <a class="nav-link" href="#">Saggio vibes</a>
+                <a class="nav-link pb-2" href="#">Saggio vibes</a>
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >main character energy (mag-giu 2022)</a
                 >
               </li>
               <li>
-                <a class="nav-link" href="#">that fucking mood</a>
+                <a class="nav-link pb-2" href="#">that fucking mood</a>
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >VEE, CARLOTTA E GIACOMO VANNO A BOSIO</a
                 >
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >An Emily Winchester kind of mood</a
                 >
               </li>
               <li>
-                <a class="nav-link" href="#">landing page (mar-apr 2022)</a>
+                <a class="nav-link pb-2" href="#"
+                  >landing page (mar-apr 2022)</a
+                >
               </li>
               <li>
-                <a class="nav-link" href="#">2021 lol</a>
+                <a class="nav-link pb-2" href="#">2021 lol</a>
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >cosa cazzo vuol dire questa affermazione (gen-feb 2022)</a
                 >
               </li>
 
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >honey and glasses (nov-div 2021)</a
                 >
               </li>
 
               <li>
-                <a class="nav-link" href="#">(Revenge Training Arc)</a>
+                <a class="nav-link pb-2" href="#">(Revenge Training Arc)</a>
               </li>
 
               <li>
-                <a class="nav-link" href="#">Lidia Emily</a>
+                <a class="nav-link pb-2" href="#">Lidia Emily</a>
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >minecraft e nintendo switch (sept-oct 2021)</a
                 >
               </li>
               <li>
-                <a class="nav-link" href="#">landing page (mar-apr 2022)</a>
+                <a class="nav-link pb-2" href="#"
+                  >landing page (mar-apr 2022)</a
+                >
               </li>
               <li>
-                <a class="nav-link" href="#">2021 lol</a>
+                <a class="nav-link pb-2" href="#">2021 lol</a>
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >cosa cazzo vuol dire questa affermazione (gen-feb 2022)</a
                 >
               </li>
 
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >honey and glasses (nov-div 2021)</a
                 >
               </li>
 
               <li>
-                <a class="nav-link" href="#">(Revenge Training Arc)</a>
+                <a class="nav-link pb-2" href="#">(Revenge Training Arc)</a>
               </li>
 
               <li>
-                <a class="nav-link" href="#">Lidia Emily</a>
+                <a class="nav-link pb-2" href="#">Lidia Emily</a>
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >minecraft e nintendo switch (sept-oct 2021)</a
                 >
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >honey and glasses (nov-div 2021)</a
                 >
               </li>
 
               <li>
-                <a class="nav-link" href="#">(Revenge Training Arc)</a>
+                <a class="nav-link pb-2" href="#">(Revenge Training Arc)</a>
               </li>
 
               <li>
-                <a class="nav-link" href="#">Lidia Emily</a>
+                <a class="nav-link pb-2" href="#">Lidia Emily</a>
               </li>
               <li>
-                <a class="nav-link" href="#"
+                <a class="nav-link pb-2" href="#"
                   >minecraft e nintendo switch (sept-oct 2021)</a
                 >
               </li>
             </ul>
           </div>
+          <img id="immagineCanvas" src="" class="d-none" />
         </div>
 
         <!-- PARTE CENTALE -->
 
         <div
-          class="col-12 col-md-10 col-lg-7 text-white MainContent p-0 pb-5"
+          class="col-12 col-md-9 col-lg-7 text-white MainContent p-0 pb-5"
           id="MainContentArtist"
         >
           <div
@@ -205,9 +210,9 @@
                 <i class="bi bi-arrow-right-circle fs-4 text-secondary"></i>
               </button>
             </div>
-            <div class="dropdown d-none d-md-block">
+            <div class="dropdown d-none d-md-none d-xl-block pe-2">
               <a
-                class="btn rounded-pill bg-black2 py-0 ps-0 dropdown-toggle"
+                class="btn rounded-pill bg-black2 py-0 ps-3 dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -221,20 +226,24 @@
                 <li><a class="dropdown-item" href="#">Settings</a></li>
               </ul>
             </div>
+            <img id="immagineCanvas" src="" class="d-none" />
           </div>
         </div>
 
         <!-- PARTE DI DESTRA -->
 
-        <div class="siderbarRx d-none d-lg-block col-lg-2 bg-black2">
+        <div class="siderbarRx d-none d-lg-block col-lg-2 bg-black2 pt-3">
           <div class="custom-right-side pt-4 container-fluid">
             <div
               class="d-flex fs-5 justify-content-between text-white align-items-center mb-3"
             >
               <span style="font-size: 1rem">Attività Amici</span>
               <div class="sideIconsRx d-flex justify-content-between">
-                <i class="bi bi-person-plus me-2" style="font-size: 1rem"></i>
-                <i class="bi bi-x-lg" style="font-size: 1rem"></i>
+                <i
+                  class="bi bi-person-plus me-2 text-white"
+                  style="font-size: 1.3rem"
+                ></i>
+                <i class="bi bi-x-lg text-white" style="font-size: 1.3rem"></i>
               </div>
             </div>
             <div class="row d-flex flex-nowrap">
@@ -242,12 +251,11 @@
                 <img
                   src="/assets/imgs/search/image-1.jpeg"
                   alt="dog"
-                  width="45"
-                  height="45"
+                  width="35"
                   class="imgFriends1"
                 />
               </div>
-              <div class="col-10" id="ok">
+              <div class="col-9" id="ok">
                 <div class="justify-content-between ps-1" id="ok">
                   <p class="mb-0">Charlie Hookham</p>
                   <p class="mb-0 d-flex justify-content-end">4 ore</p>
@@ -265,8 +273,8 @@
                 <img
                   src="/assets/imgs/search/image-1.jpeg"
                   alt="dog"
-                  width="45"
-                  height="45"
+                  width="35"
+                  height="35"
                   class="imgFriends1"
                 />
               </div>
@@ -289,8 +297,8 @@
                   <img
                     src="./assets/imgs/search/image-1.jpeg"
                     alt="dog"
-                    width="45"
-                    height="45"
+                    width="35"
+                    height="35"
                     class="imgFriends1"
                   />
                 </div>
@@ -314,7 +322,7 @@
 
         <!-- PLAYERBAR  -->
         <div class="container">
-          <div id="play-bar" class="row p-3 position-fixed bottom-0 w-100 z-2">
+          <div id="player-bar" class="row position-fixed bottom-0 w-100 z-2">
             <div class="d-md-none p-3">
               <div class="d-flex justify-content-around">
                 <a
@@ -365,44 +373,63 @@
                 </div>
               </div>
             </div>
-            <div class="col-3 d-flex pe-5 ps-0 d-none d-md-flex">
+            <div class="col-3 d-flex align-items-center ps-4">
               <img
                 src="./assets/imgs/main/image-12.jpg"
-                alt=""
-                width="100px"
-                id="playbar-img"
+                alt="Album Cover"
+                class="rounded me-3 me-4"
+                width="55"
+                id="player-bar-img"
               />
-              <div class="my-auto mx-4">
-                <h5 class="my-1" id="playbar-song-title">Titolo Canzone</h5>
-                <p class="my-1" id="playbar-artist-name">Artista</p>
+              <div>
+                <strong id="player-bar-title">Fat Funny Friend</strong><br />
+                <small id="player-bar-artist">Maddie Zahm</small>
               </div>
-              <div class="my-auto">
-                <i class="fs-4 bi bi-heart"></i>
-              </div>
+              <i class="bi bi-heart ms-3"></i>
             </div>
             <div
               class="col-6 d-flex flex-column justify-content-center flex-grow-1 px-5 d-none d-md-flex"
             >
               <div class="d-flex align-items-center justify-content-center">
-                <i class="fs-3 mx-2 bi bi-shuffle pointer"></i>
-                <i class="fs-3 mx-2 bi bi-skip-backward-fill pointer"></i>
-                <i class="fs-1 mx-2 bi bi-play-circle-fill pointer"></i>
-                <i class="fs-3 mx-2 bi bi-skip-forward-fill pointer"></i>
-                <i class="fs-3 mx-2 bi bi-arrow-repeat pointer"></i>
+                <i class="fs-5 mx-2 text-success bi bi-shuffle pointer"></i>
+                <i class="fs-5 mx-2 bi bi-skip-backward-fill pointer"></i>
+                <i
+                  class="fs-2 mx-2 bi bi-play-circle-fill pointer"
+                  id="play-button"
+                ></i>
+                <i class="fs-5 mx-2 bi bi-skip-forward-fill pointer"></i>
+                <i
+                  class="fs-5 mx-2 text-success bi bi-arrow-repeat pointer"
+                ></i>
               </div>
-              <div class="d-flex gap-2">
-                <span>0:00</span>
-                <input type="range" class="form-range" min="0" max="30" />
-                <span>0:00</span>
+              <div class="d-flex align-items-center">
+                <small>0:58</small>
+                <div class="progress mx-2 flex-grow-1">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    style="width: 30%"
+                  >
+                    <!-- da mettere apposto con JS -->
+                  </div>
+                </div>
+                <small>3:20</small>
               </div>
             </div>
             <div
-              class="col-3 d-flex justify-content-end align-items-center ps-5 pe-0 d-none d-md-flex"
+              class="col-3 d-flex justify-content-end align-items-center ps-5 pe-3 d-none d-md-flex"
             >
               <i class="fs-5 px-2 bi bi-mic pointer"></i>
               <i class="fs-5 px-2 bi bi-view-list pointer"></i>
               <i class="fs-5 px-2 bi bi-speaker pointer"></i>
               <i class="fs-2 me-1 bi bi-volume-down pointer"></i>
+              <div class="progress mx-2" style="width: 100px">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  style="width: 30%"
+                ></div>
+              </div>
               <i class="fs-5 px-2 bi bi-arrows-angle-expand pointer"></i>
             </div>
           </div>
@@ -414,5 +441,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/artist.js"></script>
   </body>
 </html>
