--- a/album.html
+++ b/album.html
@@ -19,7 +19,6 @@
     <div class="container-fluid">
       <div class="row">
         <!-- NAVBAR DI SINISTRA -->
-
         <div class="d-none d-md-block col-md-3 py-3 pe-0 bg-black2">
           <nav>
             <a
@@ -51,7 +50,6 @@
               </ul>
             </div>
           </nav>
-
           <hr class="division ms-1" />
           <div id="side-scroll" class="custom-padding ms-2">
             <ul>
@@ -88,53 +86,12 @@
               <li>
                 <a class="nav-link pb-2" href="#">cosa cazzo vuol dire questa affermazione (gen-feb 2022)</a>
               </li>
-
               <li>
                 <a class="nav-link pb-2" href="#">honey and glasses (nov-div 2021)</a>
               </li>
-
               <li>
                 <a class="nav-link pb-2" href="#">(Revenge Training Arc)</a>
               </li>
-
-              <li>
-                <a class="nav-link pb-2" href="#">Lidia Emily</a>
-              </li>
-              <li>
-                <a class="nav-link pb-2" href="#">minecraft e nintendo switch (sept-oct 2021)</a>
-              </li>
-              <li>
-                <a class="nav-link pb-2" href="#">landing page (mar-apr 2022)</a>
-              </li>
-              <li>
-                <a class="nav-link pb-2" href="#">2021 lol</a>
-              </li>
-              <li>
-                <a class="nav-link pb-2" href="#">cosa cazzo vuol dire questa affermazione (gen-feb 2022)</a>
-              </li>
-
-              <li>
-                <a class="nav-link pb-2" href="#">honey and glasses (nov-div 2021)</a>
-              </li>
-
-              <li>
-                <a class="nav-link pb-2" href="#">(Revenge Training Arc)</a>
-              </li>
-
-              <li>
-                <a class="nav-link pb-2" href="#">Lidia Emily</a>
-              </li>
-              <li>
-                <a class="nav-link pb-2" href="#">minecraft e nintendo switch (sept-oct 2021)</a>
-              </li>
-              <li>
-                <a class="nav-link pb-2" href="#">honey and glasses (nov-div 2021)</a>
-              </li>
-
-              <li>
-                <a class="nav-link pb-2" href="#">(Revenge Training Arc)</a>
-              </li>
-
               <li>
                 <a class="nav-link pb-2" href="#">Lidia Emily</a>
               </li>
@@ -171,37 +128,21 @@
           </div>
           <div class="d-flex px-3 pt-5">
             <div>
-              <img
-                src="./assets/imgs/search/image-16.jpg"
-                style="max-height: 170px"
-              />
+              <img src="" style="width: 120px" class="album-cover" />
             </div>
             <div class="ps-3 pt-4">
               <small>ALBUM</small> <br />
               <div class="album-title-sticky">
-                <strong class="fs-1 fw-bold title-album">Soul Lounge</strong>
+                <strong class="fs-1 fw-bold title-album"></strong>
               </div>
               <br />
               <div class="d-flex align-items-center pt-4">
-                <img
-                  src="./assets/imgs/main/image-18.jpg"
-                  width="25"
-                  class="rounded-circle shadow"
-                />
-                <small class="px-2"
-                  >Pinguini Tattici Nucleari • 2017 • 12 brani,<span
-                    class="opacity-50"
-                  >
-                    53 min 20 sec.</span
-                  ></small
-                >
+                <img src="" width="25" class="rounded-circle shadow artist-picture" />
+                <small class="px-2 album-info"> <span class="opacity-50"> </span></small>
               </div>
             </div>
           </div>
-          <div
-            class="bg-body-tertiary mt-2 pt-1 text-decoration-none"
-            style="--bs-bg-opacity: 0.5"
-          >
+          <div class="bg-body-tertiary mt-2 pt-1 text-decoration-none" style="--bs-bg-opacity: 0.5">
             <div class="d-flex align-items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -229,172 +170,6 @@
                 <small class="col-3">RIPRODUZIONI</small>
                 <small class="col-1"><i class="bi bi-clock"></i></small>
               </div>
-
-              <div class="col-12 song-item d-flex align-items-center mt-3">
-                <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6 titolo-canzone">
-                  Montanelli - Intro <br />
-                  <small class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">2</div>
-                <div class="col-6 titolo-canzone">
-                  Sciare<br /><small class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">1,294,678</div>
-                <div class="col-1 durata-canzone">2:49</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">3</div>
-                <div class="col-6 titolo-canzone">
-                  Gioventù Brucata <br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">974,578</div>
-                <div class="col-1 durata-canzone">2:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">4</div>
-                <div class="col-6 titolo-canzone">
-                  Ninnananna per genitori disattenti<br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">6,394,078</div>
-                <div class="col-1 durata-canzone">4:08</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">5</div>
-                <div class="col-6 titolo-canzone">
-                  L'uomo che inventò il fuoco<br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">294,070</div>
-                <div class="col-1 durata-canzone">4:21</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">6</div>
-                <div class="col-6 titolo-canzone">
-                  Irene <br /><small class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">1,094,578</div>
-                <div class="col-1 durata-canzone">3:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">7</div>
-                <div class="col-6 titolo-canzone">
-                  Senti che cantare questi <br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">8</div>
-                <div class="col-6 titolo-canzone">
-                  Pula <br /><small class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">9</div>
-                <div class="col-6 titolo-canzone">
-                  Ocean Avenue <br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">10</div>
-                <div class="col-6 titolo-canzone">
-                  Only One <br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">11</div>
-                <div class="col-6 titolo-canzone">
-                  Breathing <br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">12</div>
-                <div class="col-6 titolo-canzone">
-                  Breathing <br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">13</div>
-                <div class="col-6 titolo-canzone">
-                  Breathing <br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">14</div>
-                <div class="col-6 titolo-canzone">
-                  Breathing <br /><small
-                    class="fw-light opacity-50 artista-canzone"
-                    >Pinguini Tattici Nucleari</small
-                  >
-                </div>
-                <div class="col-3">694,578</div>
-                <div class="col-1 durata-canzone">1:28</div>
-              </div>
             </div>
           </div>
         </div>
@@ -410,12 +185,7 @@
               </div>
             </div>
             <div class="friend-item d-flex align-items-center mb-3">
-              <img
-                src="./assets/imgs/main/image-3.jpg"
-                alt="picture"
-                class="rounded-circle ms-1 me-2"
-                width="35"
-              />
+              <img src="./assets/imgs/main/image-3.jpg" alt="picture" class="rounded-circle ms-1 me-2" width="35" />
               <div>
                 <strong>Charlie Hookham</strong> <br />
                 <small class="fw-lighter">In Camera - Yumi Zouma</small><br />
@@ -424,27 +194,16 @@
               <small class="ms-auto">4 ore</small>
             </div>
             <div class="friend-item d-flex align-items-center mb-3">
-              <img
-                src="./assets/imgs/main/image-10.jpg"
-                alt="picture"
-                class="rounded-circle ms-1 me-2"
-                width="35"
-              />
+              <img src="./assets/imgs/main/image-10.jpg" alt="picture" class="rounded-circle ms-1 me-2" width="35" />
               <div>
                 <strong>lightdark02</strong> <br />
-                <small class="fw-lighter">Aimed to Kill - Jade LeMac</small
-                ><br />
+                <small class="fw-lighter">Aimed to Kill - Jade LeMac</small><br />
                 <small><i class="bi bi-disc pe-1"></i>Aimed to Kill</small>
               </div>
               <small class="ms-auto">8 ore</small>
             </div>
             <div class="friend-item d-flex align-items-center mb-3">
-              <img
-                src="./assets/imgs/main/image-11.jpg"
-                alt="picture"
-                class="rounded-circle ms-1 me-2"
-                width="35"
-              />
+              <img src="./assets/imgs/main/image-11.jpg" alt="picture" class="rounded-circle ms-1 me-2" width="35" />
               <div>
                 <strong>Valeria Traverso</strong> <br />
                 <small class="fw-lighter">New Kings - Sleeping Wolf</small><br />
@@ -457,7 +216,6 @@
 
         <!-- PLAYERBAR  -->
         <div class="container">
-          <div id="player-bar" class="row position-fixed bottom-0 w-100 z-2">
           <div id="player-bar" class="row position-fixed bottom-0 w-100 z-2">
             <div class="d-md-none p-3">
               <div class="d-flex justify-content-around">
@@ -488,7 +246,7 @@
               </div>
             </div>
             <div class="col-3 d-flex align-items-center ps-4">
-              <img src="./assets/imgs/main/image-12.jpg" alt="Album Cover" class="rounded me-3 me-4 image-song" width="55" />
+              <img src="" alt="Album Cover" class="rounded me-3 me-4 image-song" width="55" />
               <div>
                 <strong class="title-song">Fat Funny Friend</strong><br />
                 <small class="artist-song">Maddie Zahm</small>
@@ -506,7 +264,9 @@
               <div class="d-flex align-items-center">
                 <small class="current-duration">0:00</small>
                 <div class="progress mx-2 flex-grow-1">
-                  <div class="bg-white progress-bar" role="progressbar"></div>
+                  <div class="bg-white progress-bar" role="progressbar">
+                    <!-- da mettere apposto con JS -->
+                  </div>
                 </div>
                 <small class="duration-song">3:20</small>
               </div>
@@ -531,5 +291,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/album.js"></script>
+    <script></script>
   </body>
 </html>
