--- a/search.html
+++ b/search.html
@@ -174,6 +174,81 @@
         </div>
       </div>
     </div>
+
+    <!--PLAYER BAR-->
+
+    <div class="container">
+      <div id="play-bar" class="row position-fixed bottom-0 w-100 z-2">
+        <div class="d-md-none p-3">
+          <div class="d-flex justify-content-around">
+            <a
+              href="./homepage.html"
+              class="text-decoration-none text-white pointer">
+              <div
+                class="d-flex flex-column align-items-center justify-content-center">
+                <i class="bi bi-house-door-fill fs-1"></i>
+                <span>Home</span>
+              </div>
+            </a>
+            <a
+              href="./search.html"
+              class="text-decoration-none text-white pointer">
+              <div
+                class="d-flex flex-column align-items-center justify-content-center">
+                <i class="bi bi-search fs-1"></i>
+                <span>Cerca</span>
+              </div>
+            </a>
+            <div
+              class="d-flex flex-column align-items-center justify-content-end">
+              <svg
+                width="39px"
+                data-encore-id="icon"
+                role="img"
+                aria-hidden="true"
+                viewBox="0 0 24 24"
+                class=""
+                fill="white">
+                <path
+                  d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"></path>
+              </svg>
+              <span>Libreria</span>
+            </div>
+            <div
+              class="d-flex flex-column align-items-center justify-content-center">
+              <i class="bi bi-spotify fs-1"></i>
+              <span>Get app</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 d-flex align-items-center ps-4">
+          <img
+            src="./assets/imgs/main/image-12.jpg"
+            alt="Album Cover"
+            class="rounded me-3 me-4 image-song"
+            width="55" />
+          <div>
+            <strong class="title-song">Fat Funny Friend</strong><br />
+            <small class="artist-song">Maddie Zahm</small>
+          </div>
+          <i class="bi bi-heart ms-3"></i>
+        </div>
+        <div
+          class="col-6 d-flex flex-column justify-content-center flex-grow-1 px-5 d-none d-md-flex">
+          <div class="d-flex align-items-center justify-content-center">
+            <i class="fs-5 mx-2 text-success bi bi-shuffle pointer"></i>
+            <i
+              class="fs-5 mx-2 bi bi-skip-backward-fill pointer previous-btn"></i>
+            <i class="fs-2 mx-2 bi bi-play-circle-fill pointer play-btn"></i>
+            <i class="fs-5 mx-2 bi bi-skip-forward-fill pointer next-btn"></i>
+            <i class="fs-5 mx-2 text-success bi bi-arrow-repeat pointer"></i>
+          </div>
+          <div class="progress-bar-container">
+            <div class="progress-bar"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
