--- a/artist.html
+++ b/artist.html
@@ -299,6 +299,25 @@
         <div class="container">
           <div id="player-bar" class="row position-fixed bottom-0 w-100 z-2">
             <div class="d-md-none p-3">
+              <div
+                class="p-3 bg-spotify rounded-3 d-flex justify-content-between position-fixed song-fixed-player"
+              >
+                <div class="d-flex">
+                  <img
+                    width="60px"
+                    src="./assets/imgs/main/image-18.jpg"
+                    alt=""
+                  />
+                  <div class="ms-3 d-flex flex-column justify-content-center">
+                    <h5 class="m-0">Titolo Canzone</h5>
+                    <small>Artista</small>
+                  </div>
+                </div>
+                <div class="d-flex align-items-center gap-4">
+                  <i class="fs-4 bi bi-heart p-2 fs-3"></i>
+                  <i class="bi bi-play p-2 fs-1"></i>
+                </div>
+              </div>
               <div class="d-flex justify-content-around">
                 <a
                   href="./homepage.html"
@@ -405,7 +424,7 @@
         </div>
       </div>
     </div>
-    <script src="./assets/album.js"></script>
+    <!-- <script src="./assets/album.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
