--- a/homepage.html
+++ b/homepage.html
@@ -225,7 +225,7 @@
           </div>
           <!-- ANNUNCI -->
           <!-- wrap annunci per applicare background -->
-          <div class="d-none d-md-block p-2 custom_bg">
+          <div class="d-none d-md-block p-2 custom_bg mt-5">
             <div class="row">
               <div class="col-3 pe-0"">
                 <img
@@ -547,6 +547,25 @@
                 </div>
               </div>
             </div>
+            <div
+                class="p-3 bg-spotify rounded-3 d-md-none d-flex justify-content-between position-fixed song-fixed-player"
+              >
+                <div class="d-flex">
+                  <img
+                    width="60px"
+                    src="./assets/imgs/main/image-18.jpg"
+                    alt=""
+                  />
+                  <div class="ms-3 d-flex flex-column justify-content-center">
+                    <h5 class="m-0">Titolo Canzone</h5>
+                    <small>Artista</small>
+                  </div>
+                </div>
+                <div class="d-flex align-items-center gap-4">
+                  <i class="fs-4 bi bi-heart p-2 fs-3"></i>
+                  <i class="bi bi-play p-2 fs-1"></i>
+                </div>
+              </div>
             <div class="col-3 d-flex align-items-center ps-4">
               <img
                 src="./assets/imgs/main/image-12.jpg"
